--- a/css/app.css
+++ b/css/app.css
@@ -97,12 +97,12 @@ ul{list-style:none}
 .temp{opacity:.72}
 
 footer{
-  background:rgb(8, 19, 78);;padding:1rem;text-align:center;margin-top:2rem;border-top:1px solid rgba(255,255,255,.08); position: sticky; width: 100%; left: 0; bottom: 0; z-index: 50;
+  background:rgb(8, 19, 78); padding:1rem;text-align:center;margin-top:2rem;border-top:1px solid rgba(255,255,255,.08); position: absolute; width: 100%;left: 0; bottom: 0; z-index: 50;
 }
 
 /* Responsive form */
 @media (max-width:768px){
   .task-form{flex-direction:column}
   .btn{width:100%}
-  .btn-text {border-radius: 15px; font-size: 24px; padding: 5px 0;}
+  .btn{border-radius: 15px; font-size: 24px; padding: 5px 0;}
 }
