--- a/css/app.css
+++ b/css/app.css
@@ -47,6 +47,7 @@ nav {
   margin: 0 auto;
   display: flex;
   align-items: center;
+  justify-content: space-between;
   gap: 1rem;
   padding: 0.75rem 1rem;
 }
